--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
 
 <style type="text/css">
 body{margin-top:20px;
-    background:#eee;
+    background:white;
 }
 /* E-commerce */
 .product-box {
@@ -116,7 +116,7 @@ table.shoping-cart-table tr td:last-child {
 .product-price {
   font-size: 14px;
   font-weight: 600;
-  color: darkslategrey;
+  color: whitesmoke;
   background-color: #1ab394;
   padding: 6px 12px;
   position: absolute;
@@ -173,10 +173,10 @@ table.shoping-cart-table tr td:last-child {
   min-height: 48px;
 }
 .ibox-content {
-  background-color: whitesmoke;
+  background-color: #ffffff;
   color: inherit;
   padding: 15px 20px 20px 20px;
-  border-color: #e7eaec;
+  border-color: #red;
   border-image: none;
   border-style: solid solid none;
   border-width: 1px 0;
