--- a/templates/registered.html
+++ b/templates/registered.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ASILBEK'S BLOG.17</title>
+    <link rel="icon" type="image/x-icon" href="media/icon.png">
 </head>
+
 <body>
 <style>
 {% block content %}
